Fix layout bug with API refrences tables

--- a/packages/ag-charts-website/src/features/api-documentation/components/ApiReference.module.scss
+++ b/packages/ag-charts-website/src/features/api-documentation/components/ApiReference.module.scss
@@ -35,6 +35,7 @@
     display: table; // remove after table > div refactor
     position: relative;
     table-layout: fixed;
+    width: 100%;
 
     @container (max-width: #{$breakpoint-table-small}) {
         display: block;
